--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ simpy = "^4.1.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
+ruff = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core"]
